<resources>
    <string name="app_name">Recycler</string>
    <string name="TxtWelcome">Bienvenido</string>
    <string name="TxtClassify">Clasifica tu envase</string>
    <string name="TxtLocate">Localiza tu area de reciclaje</string>
    <string name="TxtAwards">Gana Premios Por Reciclar</string>
    <string name="TxtLearn">Aprende</string>
    <string name="TxtHome">Inicio</string>
    <string name="TxtCalculator">Calculadora</string>
    <string name="TxtUser">Usuario</string>
    <string name="TxtDescriptionIconProfileUser">Icon del perfil de usuario</string>
    <string name="TxtDescriptionIconQr">Icono de qr</string>
    <string name="TxtDescriptionIconAwards">Icono de premios</string>
    <string name="TxtDescriptionIconTrash">Icono de papelera</string>
    <string name="TxtNameLogin">Escriba aqui su nombre de usuario</string>
    <string name="TxtPasswordLogin">Contraseña</string>
    <string name="TxtPasswordLoginHint">Escriba aqui su contraseña</string>
    <string name="TxtLogin">Iniciar sesion</string>
    <string name="TxtOr">O</string>
    <string name="TxtLogout">Cerrar sesion</string>
    <string name="TxtRegisterLogin">Registrate</string>
    <string name="TxtIconExit">Icono boton salir</string>
    <string name="TxtProfile">Perfil</string>
    <string name="TxtSettings">Ajustes</string>
    <string name="TxtExit">Salir</string>
    <string name="TxtHeaderNavigationName">Usuario</string>
    <string name="TxtHeaderNavigationMail">usuario@correo.com</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="TxtErrorLogin">Usuario y/o contraseña incorrecto</string>
    <string name="TxtRegister">Registro</string>
    <string name="TxtNameUserRegister">Nombre del usuario:</string>
    <string name="TxtPasswordRegister">Introduzca su contraseña:</string>
    <string name="TxtRepeatPasswordRegister">Repita la contraseña:</string>
    <string name="TxtEnterEmail">Introduzca su email:</string>
    <string name="TxtErrorPassword">Las contraseñas deben de coincidir</string>
    <string name="TxtScan">Escanear</string>
    <string name="TxtCanceled">Cancelado</string>
    <string name="TxtMessageScan">Escanee el codigo de barras del envase</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="TxtAcceptPermissionsSettings">Vaya a ajustes y acepte los permisos</string>
    <string name="TxtErrorDataBase">Se ha producido un error en la base de datos</string>
    <string name="TxtUserSaveDataBase">Se ha guardado correctamente el usuario en la base de datos</string>
    <string name="TxtUserErrorDataBase">No se ha podido guardar el usuario en la base de datos</string>
    <string name="TxtNameExists">El nombre de ese usuario ya existe</string>
    <string name="TxtResults">Resultados de la busqueda</string>
    <string name="TxtResult">No hay resultados</string>
    <string name="TxtContainerNotFound">No hay un envase con ese codigo en la base de datos</string>
    <string name="TxtPlasticResult">El envase escaneado es de plastico/latas/brick y por lo tanto tiene que depositarse en el contenedor amarillo</string>
    <string name="TxtCardboardResult">El envase escaneado es de papel/cartón y por lo tanto  tiene que depositarse en el contenedor azul</string>
    <string name="TxtGlassResult">El envase escaneado es de cristal y por lo tanto tiene que depositarse en el contenedor verde</string>
    <string name="TxtEcoparkResult">El envase escaneado contiene componentes electronicos y por lo tanto tiene que llevarse a un ecoparque</string>
    <string name="TxtLearnHeader">Aprende a reciclar</string>
    <string name="TxtWhatThrowEachContainer">Que tirar en cada contenedor</string>
    <string name="TxtWhatCanBeRecycled">Que se puede reciclar</string>
    <string name="TxtEcoAwarness">Conciencia Eco</string>
    <string name="TxtRecycleMe">Reciclame</string>
    <string name="TxtCalculatorHeader">Calcula tu huella de carbono</string>
    <string name="TxtElectricity">Electricidad consumida en Kwh</string>
    <string name="TxtKilometers">Kilometros recorridos</string>
    <string name="TxtConsumeGas">Gas consumido en (m³) </string>
    <string name="TxtCalculate">Calcular</string>
    <string name="TxtTotalCarbonFootprint">Huella total de carbono:</string>
    <string name="TxtAwardsRegister">Debes de estar registrado para acceder a los premios</string>
    <string name="TxtAwardsHeader">Mira quien recicla más</string>
    <string name="TxtWinAwards">Gana premios</string>
    <string name="TxtSoundOn">Reproducir el sonido mientras se ejecuta la aplicación</string>
    <string name="TxtSoundOff">No reproducir sonidos mientras se ejecuta la aplicación</string>
    <string name="TxtSound">Sonido</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="TxtCountry">Pais de residencia</string>
    <string name="TxtIndicateCountry">Indica el pais donde vives</string>
    <string name="TxtListOfContainers">Lista de materiales reciclados</string>
    <string name="TxtTypeOfMaterials">Tipo de materiales que sueles reciclar</string>
    <string name="TxtCategory1">Ajustes aplicación</string>
    <string name="TxtCategory2">Información usuario</string>
    <string name="TxtCategory3">Informacion reciclaje</string>
    <string name="TxtDiscountsHeader">Canjea tus puntos por descuentos</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>