<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/icon_home"
        android:title="@string/TxtHome"/>
    <item
        android:id="@+id/navSettings"
        android:icon="@drawable/icon_preferences"
        android:title="@string/TxtSettings"/>
    <item
        android:id="@+id/navExit"
        android:icon="@drawable/icon_exit"
        android:title="@string/TxtExit"/>

    <item android:title="@string/TxtProfile">
        <menu>
            <item
                android:id="@+id/navLogin"
                android:icon="@drawable/icon_login"
                android:title="@string/TxtLogin"/>
        </menu>

    </item>



</menu>